--- a/docs/styles.css
+++ b/docs/styles.css
@@ -32,7 +32,7 @@ html {
   -moz-tab-size: 4; /* 3 */
   -o-tab-size: 4;
      tab-size: 4; /* 3 */
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+  font-family: CB, sans-serif; /* 4 */
 }
 
 /*
@@ -372,6 +372,15 @@ video {
   max-width: 100%;
   height: auto;
 }
+    html, 
+    body {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
@@ -513,22 +522,125 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.flex {
-  display: flex;
+.fixed {
+  position: fixed;
 }
-.h-screen {
-  height: 100vh;
+.bottom-0 {
+  bottom: 0px;
 }
-.w-screen {
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.col-start-1 {
+  grid-column-start: 1;
+}
+.col-start-3 {
+  grid-column-start: 3;
+}
+.col-start-2 {
+  grid-column-start: 2;
+}
+.col-start-4 {
+  grid-column-start: 4;
+}
+.m-0 {
+  margin: 0px;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.grid {
+  display: grid;
+}
+.h-full {
+  height: 100%;
+}
+.h-40 {
+  height: 10rem;
+}
+.w-\[100vw\] {
   width: 100vw;
 }
-.items-center {
-  align-items: center;
+.w-3\/4 {
+  width: 75%;
 }
-.justify-center {
-  justify-content: center;
+.w-full {
+  width: 100%;
 }
-.bg-daily-dev-tips {
+.cursor-pointer {
+  cursor: pointer;
+}
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.justify-start {
+  justify-content: flex-start;
+}
+.gap-4 {
+  gap: 1rem;
+}
+.bg-zinc-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 146 131 / var(--tw-bg-opacity));
+  background-color: rgb(244 244 245 / var(--tw-bg-opacity));
 }
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.p-6 {
+  padding: 1.5rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.font-sans {
+  font-family: CB, sans-serif;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.leading-normal {
+  line-height: 1.5;
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+@font-face {
+    font-family: "CB";
+    src: url(./src/fonts/CB.otf);
+  }
+
+.hover\:text-zinc-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
+}
+  
